--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,8 @@
 @import "libs/bootstrap-reboot.min";
 // @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap");
+@import "base/variables";
+@import "base/mixins";
+@import "base/fonts";
 
 * {
   font-family: "Poppins", sans-serif;
@@ -7,4 +10,12 @@
   padding: 0;
 }
 
-@import "base/fonts";
+.container {
+  width: 1140px;
+  margin: 0 20.3vw;
+}
+
+@import "blocks/promo";
+@import "blocks/title";
+@import "blocks/button";
+@import "blocks/sidepanel";
