--- a/src/sass/blocks/_sidepanel.scss
+++ b/src/sass/blocks/_sidepanel.scss
@@ -8,6 +8,13 @@
   top: 30vh;
   left: 2.5vw;
   align-items: center;
+  &__link {
+    &:hover {
+      svg path {
+        fill: red;
+      }
+    }
+  }
   &__divider {
     height: 70px;
     width: 2px;
