--- a/src/sass/blocks/_menu.scss
+++ b/src/sass/blocks/_menu.scss
@@ -21,3 +21,88 @@
     width: 36px;
   }
 }
+
+.menu {
+  position: fixed;
+  top: 0;
+  left: -100%;
+  width: 100vw;
+  height: 100vh;
+  z-index: 10;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.6s;
+  &.active {
+    left: 0;
+    visibility: visible;
+    opacity: 1;
+  }
+  &__block {
+    z-index: 20;
+    padding-top: 19vh;
+    padding-left: 1vw;
+    position: relative;
+    // left: -100%;
+    width: 18vw;
+    height: 100vh;
+    background-color: $main-color;
+    transition: all 0.6s;
+  }
+  &__close {
+    z-index: 22;
+    position: absolute;
+    top: 1vw;
+    right: 1vw;
+    cursor: pointer;
+  }
+  &__list {
+    padding-left: 2vw;
+    list-style-type: none;
+  }
+  &__link {
+    position: relative;
+    margin-bottom: 15px;
+    line-height: 36px;
+    font-weight: 700;
+    font-size: 24px;
+    &:before {
+      content: "";
+      position: absolute;
+      left: -1.6vw;
+      top: 30%;
+      width: 15px;
+      height: 15px;
+      border: 1px solid rgb(0, 0, 0);
+      border-radius: 50%;
+    }
+    &:hover {
+      text-shadow: 1px 1px 1px #151812;
+      &:before {
+        background-color: #fff;
+        border: 1px solid rgb(255, 255, 255);
+      }
+    }
+    a {
+      color: #fff;
+    }
+  }
+  &__social {
+    position: absolute;
+    width: 90px;
+    display: flex;
+    bottom: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    opacity: 0.7;
+  }
+}
