--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -1,12 +1,12 @@
 .about {
-  padding-top: 120px;
+  padding-top: 13vh;
   &__wrapper {
     display: grid;
-    grid-template-columns: 400px 670px;
-    grid-template-rows: minmax(245px, auto) minmax(255px, auto);
-    grid-auto-rows: minmax(245px, auto);
-    column-gap: 70px;
-    row-gap: 40px;
+    grid-template-columns: 37.3% 59.7%;
+    grid-template-rows: minmax(20vh, auto) minmax(20vh, auto);
+    grid-auto-rows: minmax(20vh, auto);
+    column-gap: 3.65vw;
+    row-gap: 2vw;
   }
   &__photo {
     grid-row: 1/3;
@@ -17,7 +17,11 @@
   &__descr {
     padding-top: 6px;
     .divider {
-      margin-top: 0;
+      width: 60px;
+      height: 0px;
+      border: 2px solid $main-color;
+      border-radius: 2px;
+      margin: 0;
     }
   }
   &__title {
@@ -32,13 +36,12 @@
   }
   &__skills {
     display: grid;
-    grid-template: repeat(2, minmax(115px, auto)) / repeat(2, 260px);
-    grid-auto-rows: 1fr;
-    column-gap: 50px;
+    grid-template: repeat(2, minmax(5.9vw, auto)) / repeat(2, auto);
+    column-gap: 2.6vw;
     row-gap: 20px;
     &-item {
       display: grid;
-      grid-template-columns: 40px 200px;
+      grid-template-columns: 40px 1fr;
       column-gap: 20px;
     }
     &-circle {
