--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,8 +11,15 @@
 }
 
 .container {
-  width: 1140px;
-  margin: 0 20.3vw;
+  width: 59vw;
+  margin: 0 auto;
+}
+.divider {
+  width: 60px;
+  height: 0px;
+  border: 2px solid $main-color;
+  border-radius: 2px;
+  margin: 25px auto 0 auto;
 }
 
 @import "blocks/promo";
@@ -20,4 +27,5 @@
 @import "blocks/button";
 @import "blocks/sidepanel";
 @import "blocks/menu";
-@import 'blocks/about';
+@import "blocks/about";
+@import "blocks/resume";
