--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -55,9 +55,27 @@
       top: -9px;
       left: 12px;
     }
-    button {
-      grid-column: 1/3;
-      grid-row: 3/4;
+    // button {
+    //   grid-column: 1/3;
+    //   grid-row: 3/4;
+    //   justify-self: center;
+    // }
+  }
+
+  &__triggers {
+    grid-column: 1/3;
+    grid-row: 3/4;
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+  }
+
+  &__policy {
+    display: flex;
+    font-size: 12px;
+    align-items: center;
+    justify-self: end;
+    input {
+      margin-right: 10px;
     }
   }
 
@@ -88,6 +106,8 @@
     &:hover {
       color: rgb(255, 255, 255);
       text-decoration: none;
+      transform: scale(1.01);
+      transition: 0.2s;
     }
   }
 }
