pre final adapt

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,7 +11,7 @@
 }
 
 .container {
-  width: 59vw;
+  width: 1040px;
   margin: 0 auto;
 }
 .divider {
@@ -36,3 +36,4 @@ p {
 @import "blocks/portfolio";
 @import "blocks/price";
 @import "blocks/contacts";
+@import "blocks/media";
