--- a/src/sass/blocks/_resume.scss
+++ b/src/sass/blocks/_resume.scss
@@ -13,10 +13,11 @@
     text-align: center;
   }
   &__wrapper {
-    padding: 60px 65px 0 65px;
+    padding: 60px 5px 0 5px;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 425px);
     column-gap: 7vw;
+    justify-content: center;
   }
   &__column {
     &-title {
