--- a/src/sass/blocks/_portfolio.scss
+++ b/src/sass/blocks/_portfolio.scss
@@ -17,8 +17,7 @@
     margin-top: 60px;
     margin-bottom: 10px;
     display: grid;
-    grid-template: repeat(2, 280px) / repeat(4, 1fr);
-    grid-auto-rows: 280px;
+    grid-template: repeat(2, minmax(150px, 280px)) / repeat(4, 1fr);
     gap: 5px;
     .vertical {
       grid-row: 1 / span 2;
@@ -32,6 +31,8 @@
     transition: all 0.3s;
     img {
       width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
     &:hover {
       filter: drop-shadow(2px 2px 4px rgb(69, 69, 69));
